--- a/AvalancheTester/AvalancheTester.Application/App.config
+++ b/AvalancheTester/AvalancheTester.Application/App.config
@@ -1,20 +1,22 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-  <configSections>
-    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
-    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-  </configSections>
-  <startup>
-    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
-  </startup>
-  <entityFramework>
-    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
-      <parameters>
-        <parameter value="mssqllocaldb" />
-      </parameters>
-    </defaultConnectionFactory>
-    <providers>
-      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
-    </providers>
-  </entityFramework>
-<connectionStrings><add name="AvalancheTestsDbEntities" connectionString="metadata=res://*/AvalancheTestsDbEntities.csdl|res://*/AvalancheTestsDbEntities.ssdl|res://*/AvalancheTestsDbEntities.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=AvalancheTestsDB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings></configuration>
+    <configSections>
+        <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+        <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    </configSections>
+    <startup>
+        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
+    </startup>
+    <entityFramework>
+        <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
+            <parameters>
+                <parameter value="mssqllocaldb" />
+            </parameters>
+        </defaultConnectionFactory>
+        <providers>
+            <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
+            <provider invariantName="MySql.Data.MySqlClient" type="MySql.Data.MySqlClient.MySqlProviderServices, MySql.Data.Entity.EF6" />
+        </providers>
+    </entityFramework>
+    <connectionStrings><add name="AvalancheTestsDbEntities" connectionString="metadata=res://*/AvalancheTestsDbEntities.csdl|res://*/AvalancheTestsDbEntities.ssdl|res://*/AvalancheTestsDbEntities.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=AvalancheTestsDB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /><add name="userReportsEntities" connectionString="metadata=res://*/UserReportsMySQL.csdl|res://*/UserReportsMySQL.ssdl|res://*/UserReportsMySQL.msl;provider=MySql.Data.MySqlClient;provider connection string=&quot;server=localhost;user id=root;password=morkow;persistsecurityinfo=True;database=mydb&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
+</configuration>
