--- a/AvalancheTester/AvalancheTester.Application/App.config
+++ b/AvalancheTester/AvalancheTester.Application/App.config
@@ -18,5 +18,10 @@
             <provider invariantName="MySql.Data.MySqlClient" type="MySql.Data.MySqlClient.MySqlProviderServices, MySql.Data.Entity.EF6" />
         </providers>
     </entityFramework>
-    <connectionStrings><add name="AvalancheTestsDbEntities" connectionString="metadata=res://*/AvalancheTestsDbEntities.csdl|res://*/AvalancheTestsDbEntities.ssdl|res://*/AvalancheTestsDbEntities.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=AvalancheTestsDB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /><add name="userReportsEntities" connectionString="metadata=res://*/UserReportsMySQL.csdl|res://*/UserReportsMySQL.ssdl|res://*/UserReportsMySQL.msl;provider=MySql.Data.MySqlClient;provider connection string=&quot;server=localhost;user id=root;password=morkow;persistsecurityinfo=True;database=mydb&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
-</configuration>
+    <connectionStrings><add name="AvalancheTestsDbEntities" connectionString="metadata=res://*/AvalancheTestsDbEntities.csdl|res://*/AvalancheTestsDbEntities.ssdl|res://*/AvalancheTestsDbEntities.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=AvalancheTestsDB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /><add name="UserReportsEntities" connectionString="metadata=res://*/UserReportsMySQLEntities.csdl|res://*/UserReportsMySQLEntities.ssdl|res://*/UserReportsMySQLEntities.msl;provider=MySql.Data.MySqlClient;provider connection string=&quot;server=localhost;user id=root;password=morkow;persistsecurityinfo=True;database=mydb&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
+<system.data>
+    <DbProviderFactories>
+      <remove invariant="MySql.Data.MySqlClient" />
+      <add name="MySQL Data Provider" invariant="MySql.Data.MySqlClient" description=".Net Framework Data Provider for MySQL" type="MySql.Data.MySqlClient.MySqlClientFactory, MySql.Data, Version=6.9.7.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d" />
+    </DbProviderFactories>
+  </system.data></configuration>
