--- a/AvalancheTester/AvalancheTester.Application/packages.config
+++ b/AvalancheTester/AvalancheTester.Application/packages.config
@@ -6,4 +6,5 @@
   <package id="MongoDB.Bson" version="2.0.1" targetFramework="net45" />
   <package id="MongoDB.Driver" version="2.0.1" targetFramework="net45" />
   <package id="MongoDB.Driver.Core" version="2.0.1" targetFramework="net45" />
+  <package id="MySql.Data" version="6.9.7" targetFramework="net45" />
 </packages>
