experimental xml report generator, sorting pdf reports by month

--- a/AvalancheTester/AvalancheTester.Application/AvalancheTester.Application.csproj
+++ b/AvalancheTester/AvalancheTester.Application/AvalancheTester.Application.csproj
@@ -135,6 +135,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>UserReportsEntitiesMySQL.edmx</DependentUpon>
     </Compile>
+    <Compile Include="XmlReports.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config">
