--- a/AvalancheTester/AvalancheTester.Application/AvalancheTester.Application.csproj
+++ b/AvalancheTester/AvalancheTester.Application/AvalancheTester.Application.csproj
@@ -65,6 +65,10 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="MySql.Data.Entity.EF6, Version=6.9.7.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL" />
+    <Reference Include="Newtonsoft.Json, Version=7.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.7.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
@@ -103,6 +107,7 @@
     <Compile Include="DbHandlers\MongoDb\PlaceEntitiesController.cs" />
     <Compile Include="EntryPoint.cs" />
     <Compile Include="ExcelTableHandler.cs" />
+    <Compile Include="JsonReports.cs" />
     <Compile Include="ManualDataGenerator.cs" />
     <Compile Include="NewExcelTableHandler.cs" />
     <Compile Include="Organization.cs">
